Pages filled with content and some structure. Photos uploaded and positioned right on place. Next: solve navbar/main problem aiming to be responsive

--- a/app/components/modules/navBar.module.css
+++ b/app/components/modules/navBar.module.css
@@ -5,13 +5,11 @@
   margin: 0px;
   padding: 0px;
   width: 25%;
+  min-width: 180px;
+  max-width: 200px;
   font-size: 25px;
+  position: fixed;
   height: 100%;
-}
-
-.navbarphoto {
-  padding: 8px 16px;
-  list-style-type: none;
 }
 
 .navbaritem {
