--- a/app/components/modules/navBar.module.css
+++ b/app/components/modules/navBar.module.css
@@ -1,22 +1,50 @@
+.content {
+  width: 25%;
+  background-color: white;
+  min-width: 180px;
+  max-width: 200px;
+  font-size: 25px;
+  position: fixed;
+  height: 95%;
+  margin: 20px 20px;
+  border-style: solid;
+  box-shadow: -10px  -10px;
+}
+
+.logoimg {
+  display: block;
+  margin: 40px 35px 10px 35px;
+  
+}
+
+.logoitem {
+  font-family: "goudosi";
+  color: black;
+  list-style-type: none;
+  text-align: center;
+  font-size: 1.2em;
+}
+
 .navbarlist {
   display: block;
   background: rgb(255, 255, 255);
   list-style-type: none;
   margin: 0px;
   padding: 0px;
-  width: 25%;
-  min-width: 180px;
-  max-width: 200px;
-  font-size: 25px;
-  position: fixed;
-  height: 100%;
+
 }
 
 .navbaritem {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 10px;
+  line-height: 15px;
+  font-weight: 500;
+  letter-spacing: 1px;
   list-style-type: none;
+  margin: 5px 0px 0px 0px;
   display: block;
   color: black;
-  padding: 8px 16px;
+  padding: 8px 8px 0px 45px;
 }
 
 .navbaritem:hover {
@@ -28,12 +56,16 @@
   list-style-type: none;
   margin: 0px;
   padding: 0px;
-
+  align-content: center;
 }
 
 .navbarsocialitem {
-  float: left;
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
   display:block;
   color: black;
-  padding: 14px 16px;
+  padding: 10px 0px 0px 45px;
 }
