--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -4,17 +4,34 @@ a {
     color: black;
 }
 
-li a:hover {
-    text-decoration: none;
-}
-
-li a:hover {
-    text-decoration: none;
-    color: white;
-}
-
 main {
-    max-width: 75%;
-    margin: auto;
+    background-image: linear-gradient(0deg, rgba(255,255,255,0), rgba(76,76,76,1));
+    background-size: cover;
+    min-height: 90%;
+    padding: 5% 15%;
 }
 
+h1 {
+    font-family: 'IBM Plex Mono', sans-serif;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 30px;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+@font-face {
+    font-family: "goudosi";
+    src: url("/fonts/goudosi.otf");
+    font-style: italic;
+    font-weight: normal;
+}
+
+h2 {
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 20px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
