--- a/pages/fotografia.module.css
+++ b/pages/fotografia.module.css
@@ -1,7 +1,7 @@
 .column {
-    float: left;
+    float: right;
     width: 30%;
-    padding: 10px;
+    padding: 20px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
