Pages style improvement: fonts, colors, navbar hover and red decoration added. Next: add contact form, add image on webdev page

--- a/app/components/modules/navBar.module.css
+++ b/app/components/modules/navBar.module.css
@@ -47,9 +47,8 @@
   padding: 8px 8px 0px 45px;
 }
 
-.navbaritem:hover {
-  background: #555;
-  color: white;
+.navbaritem:active {
+  color: red;
 }
 
 .navbarsociallist {
