--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -5,18 +5,18 @@ a {
 }
 
 main {
-    background-image: linear-gradient(0deg, rgba(255,255,255,0), rgba(76,76,76,1));
-    background-size: cover;
+    background-color: white;
+    background-size:auto;
     min-height: 90%;
     padding: 5% 15%;
 }
 
 h1 {
-    font-family: 'IBM Plex Mono', sans-serif;
+    font-family: "goudosi";
+    font-size: 300%;
     text-transform: uppercase;
-    font-size: 12px;
     line-height: 30px;
-    font-weight: bold;
+    font-weight: normal;
     letter-spacing: 1px;
 }
 
@@ -34,4 +34,25 @@ h2 {
     line-height: 20px;
     font-weight: 500;
     letter-spacing: 1px;
+}
+
+h5 {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 11px;
+    text-transform: uppercase;
+    position: absolute;
+    right: 30px;
+    top: 10px;
+    color: red;
+}
+
+h6 {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 10px;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    position: absolute;
+    right: 0px;
+    top: 45px;
+    color: red;
 }
