--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,4 +1,51 @@
 .hello {
     font-family: "goudosi";
-    font-size: 800%;
+    font-size: 1000%;
+    font-weight: normal;
+}
+
+.text {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 150%;
+    text-transform: uppercase;
+    line-height: 150%;
+    font-weight: 300;
+    text-align: right;
+}
+
+.column {
+    float: left;
+    width: 35%;
+    padding: 10px;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 900px) {
+    .column {
+      width: 100%;
+    }
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.photo {
+    box-shadow: -10px  -10px;
+    max-height: 60%;
+}
+
+.list {
+    list-style-type: none;
+}
+
+.item {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 250%;
+    text-transform: uppercase;
+    line-height: 200%;
+    font-weight: 300;
+    text-align: right;
 }
