--- a/app/components/modules/footer.module.css
+++ b/app/components/modules/footer.module.css
@@ -1,9 +1,18 @@
+.responsive {
+    float: left;
+    width: 100%;
+    display: flex;
+}
+
+@media only screen and (min-width: 900px) {
+    .responsive {
+        float: left;
+        width: 75%;
+        display: flex;
+    }
+  }
+
 .content {
-    width: 75%;
-    margin-left: 250px;
-    margin-right: 10px;
-    margin-top: 15px;
-    padding: 1% 5%;
     border-style: solid;
     box-shadow: -10px  -10px;
     background-color: white;
@@ -11,14 +20,13 @@
 
 .column {
     float: left;
-    width: 25%;
+    width: 100%;
     padding: 10px;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-@media screen and (max-width: 900px) {
+@media only screen and (min-width: 600px) {
     .column {
-      width: 100%;
+      width: 33.3%;
     }
 }
 
@@ -38,7 +46,6 @@
     color: black;
     font-family: 'IBM Plex Mono', monospace;
     font-size: 10px;
-    line-height: 12px;
     font-weight: 500;
     letter-spacing: 1px;
 }
