--- a/app/components/modules/navBar.module.css
+++ b/app/components/modules/navBar.module.css
@@ -1,8 +1,12 @@
+@media only screen and (max-width: 900px) {
+  .hidenav {
+    display: none;
+  }
+}
+
 .content {
-  width: 25%;
+  display: flex;
   background-color: white;
-  min-width: 180px;
-  max-width: 200px;
   font-size: 25px;
   position: fixed;
   height: 95%;
@@ -27,7 +31,7 @@
 
 .navbarlist {
   display: block;
-  background: rgb(255, 255, 255);
+  background: white;
   list-style-type: none;
   margin: 0px;
   padding: 0px;
@@ -45,10 +49,6 @@
   display: block;
   color: black;
   padding: 8px 8px 0px 45px;
-}
-
-.navbaritem:active {
-  color: red;
 }
 
 .navbarsociallist {
