--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -2,9 +2,11 @@
     font-family: "goudosi";
     font-size: 1000%;
     font-weight: normal;
+    float: left;
 }
 
 .text {
+    float: left;
     font-family: 'IBM Plex Mono', monospace;
     font-size: 150%;
     text-transform: uppercase;
@@ -15,14 +17,34 @@
 
 .column {
     float: left;
-    width: 35%;
+    width: 100%;
     padding: 10px;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
 @media screen and (max-width: 900px) {
     .column {
-      width: 100%;
+        float: left;
+        width: 35%;
+        padding: 10px;
+    }
+
+    .hello {
+        font-family: "goudosi";
+        font-size: 400%;
+        font-weight: normal;
+    }
+
+    .photo {
+        box-shadow: -10px  -10px;
+        max-height: 200vw;
+    }
+
+    .links {
+        font-family: 'IBM Plex Mono', monospace;
+        font-size: 50%;
+        text-transform: uppercase;
+        text-align: right;
+        float: right;
     }
 }
 
@@ -34,7 +56,8 @@
 
 .photo {
     box-shadow: -10px  -10px;
-    max-height: 60%;
+    max-height: 40vw;
+    float: left;
 }
 
 .list {
@@ -42,10 +65,13 @@
 }
 
 .item {
+    float: right;
+}
+
+.links {
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 250%;
+    font-size: 350%;
     text-transform: uppercase;
-    line-height: 200%;
     font-weight: 300;
     text-align: right;
 }
