--- a/pages/info.module.css
+++ b/pages/info.module.css
@@ -5,9 +5,10 @@
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-@media screen and (max-width: 900px) {
-    .column {
-      width: 100%;
+@media screen and (max-width: 1200px) {
+    .column { 
+        width: 100%;
+        padding-top: 10px;
     }
 }
 
@@ -31,7 +32,7 @@
 
 .photo {
     box-shadow: -10px  -10px;
-    max-height: 60%;
+    max-height: 500%;
 }
 
 .list {
