--- a/app/components/modules/footer.module.css
+++ b/app/components/modules/footer.module.css
@@ -1,17 +1,3 @@
-.responsive {
-    float: left;
-    width: 100%;
-    display: flex;
-}
-
-@media only screen and (min-width: 900px) {
-    .responsive {
-        float: left;
-        width: 75%;
-        display: flex;
-    }
-  }
-
 .content {
     border-style: solid;
     box-shadow: -10px  -10px;
@@ -20,13 +6,20 @@
 
 .column {
     float: left;
-    width: 100%;
+    width: 85vw;
     padding: 10px;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 900px) {
+    .content {
+      margin-left: 250px;
+      width: 82vw;
+    }
+
     .column {
-      width: 33.3%;
+        float: left;
+        width: 33.3%;
+        padding: 10px;
     }
 }
 
@@ -38,7 +31,7 @@
 
 .footerlist {
     float: left;
-    display:block;
+    display: inline;
     list-style-type: none;
 }
 
