--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,6 +1,6 @@
 #__next {
     display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
     min-height: 100vh;
 }
 
@@ -38,15 +38,10 @@ a {
     color: black;
 }
 
-main {
-    background-color: white;
-}
-
 h1 {
     font-family: "goudosi";
-    font-size: 300%;
+    font-size: 2.5em;
     text-transform: uppercase;
-    line-height: 30px;
     font-weight: normal;
     letter-spacing: 1px;
 }
