--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,42 +1,46 @@
-.hello {
-    font-family: "goudosi";
-    font-size: 1000%;
-    font-weight: normal;
-    float: left;
-}
-
 .text {
-    float: left;
+    float: right;
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 150%;
+    font-size: 1.3em;
     text-transform: uppercase;
-    line-height: 150%;
     font-weight: 300;
     text-align: right;
 }
 
-.column {
-    float: left;
-    width: 100%;
-    padding: 10px;
+.redtext {
+    float: right;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: right;
+    color: red;
 }
 
-@media screen and (max-width: 900px) {
+.column {
+    width: 100%;
+    padding-top: 0px;
+    padding-right: 40px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: baseline;
+    margin-top: 60px;
+}
+
+@media only screen and (min-width: 900px) {
+
     .column {
         float: left;
-        width: 35%;
+        width: 45%;
         padding: 10px;
+        margin-top: 40px;
+        align-content: center;
     }
-
-    .hello {
-        font-family: "goudosi";
-        font-size: 400%;
-        font-weight: normal;
-    }
-
     .photo {
         box-shadow: -10px  -10px;
-        max-height: 200vw;
+        max-height: 500%;
     }
 
     .links {
@@ -44,6 +48,9 @@
         font-size: 50%;
         text-transform: uppercase;
         text-align: right;
+        float: right;
+    }
+    .item {
         float: right;
     }
 }
@@ -70,8 +77,9 @@
 
 .links {
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 350%;
+    font-size: 2.5em;
     text-transform: uppercase;
     font-weight: 300;
     text-align: right;
+    float: right;
 }
