--- a/pages/layout.module.css
+++ b/pages/layout.module.css
@@ -1,20 +1,38 @@
 .main {
-    display: flex;
-    flex-flow: row wrap;
-    background-color: white;
-    order: 1;
-    flex: 2 66.6%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
+  margin-left: 300px;
+  align-items: baseline;
+  min-height: 870px;
+  align-content: space-between;
 }
 
 
 .nav {
-    order: 1;
-    flex: 1;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.footer {
-    order: 2;
-    flex: 2;
-    position:absolute;
-    bottom: 0px;
+.foot {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+@media only screen and (max-width: 900px) {
+  .main {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: baseline;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 100px;
+  }
+
+  .foot {
+    display: flex;
+    flex-flow: row wrap;
+    margin-left: 0;
+  }
 }
