--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -82,3 +82,23 @@ h6 {
     top: 45px;
     color: red;
 }
+
+
+
+/*copiado*/
+
+button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+  
+  button:hover,
+  button:focus {
+      background:transparent;
+  }
+  
+  button:focus {
+      outline: none;
+  }
