--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -29,7 +29,9 @@
     margin-top: 60px;
 }
 
-@media only screen and (min-width: 900px) {
+
+
+@media only screen and (min-width: 1300px) {
 
     .column {
         float: left;
@@ -41,6 +43,7 @@
     .photo {
         box-shadow: -10px  -10px;
         max-height: 500%;
+        position: relative;
     }
 
     .links {
@@ -53,6 +56,33 @@
     .item {
         float: right;
     }
+
+    .jp{
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 1300px) {
+    .jpdesk {
+        display: none;
+    }
+}
+
+.jpdesk {
+    position: absolute;
+    top: 59vh;
+    left: 46vw;
+    height: 35vh;
+
+}
+
+.jp {
+    position: absolute;
+    top: 14vh;
+    left: 55vw;
+    height: 30vw;
+
 }
 
 .row:after {
@@ -66,6 +96,7 @@
     max-height: 40vw;
     float: left;
 }
+
 
 .list {
     list-style-type: none;
