--- a/pages/layout.module.css
+++ b/pages/layout.module.css
@@ -20,6 +20,10 @@
   align-items: flex-end;
 }
 
+.mobile {
+  display: none;
+}
+
 @media only screen and (max-width: 900px) {
   .main {
     display: flex;
@@ -44,6 +48,10 @@
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: black;
+  }
+
+  .mobile {
+    display: block;
   }
 
   .hamburger {
