--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -8,6 +8,11 @@ body {
     margin: 0;
 }
 
+section {
+    width: 100%;
+    height:100%;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -44,6 +49,8 @@ h1 {
     text-transform: uppercase;
     font-weight: normal;
     letter-spacing: 1px;
+    word-break: break-word;
+    max-width: 80vw;
 }
 
 @font-face {
